update generate hand notebook

--- a/glo-30-hand/generate-hand-notebook.ipynb
+++ b/glo-30-hand/generate-hand-notebook.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## 0. Install dependencies\n",
     "\n",
-    "To run this notebook, you'll need the [ASF Tools](https://hyp3-docs.asf.alaska.edu/tools/asf_tools/) Python package, [numpy](https://numpy.org/), [rasterio](https://rasterio.readthedocs.io/), and [shapely](https://shapely.readthedocs.io/en/stable/manual.html). You can install them into a conda environment with:"
+    "To run this notebook, you'll need the [HydroSAR](https://pypi.org/project/hydrosar/) Python package, the [ASF Tools](https://hyp3-docs.asf.alaska.edu/tools/asf_tools/) Python package, [numpy](https://numpy.org/), [rasterio](https://rasterio.readthedocs.io/), and [shapely](https://shapely.readthedocs.io/en/stable/manual.html). You can install them into a conda environment with:"
    ],
    "metadata": {
     "collapsed": false
@@ -20,7 +20,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "%conda install -c conda-forge asf_tools numpy rasterio shapely"
+    "%conda install -c conda-forge asf_tools>=0.6 numpy rasterio shapely"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "!python -m pip install hydrosar"
    ],
    "metadata": {
     "collapsed": false
@@ -122,7 +132,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Calculate an initial HAND over the entire buffered area using the specified accumulation threshold"
+    "Calculate an initial HAND over the entire buffered area using the specified accumulation threshold\n",
+    "\n",
+    "*Note: this will take a while.*"
    ],
    "metadata": {
     "collapsed": false
@@ -133,7 +145,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from asf_tools.hand.calculate import calculate_hand_for_basins\n",
+    "from hydrosar.hand.calculate import calculate_hand_for_basins\n",
     "\n",
     "accumulation_threshold = 100\n",
     "\n",
@@ -211,7 +223,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from asf_tools.composite import write_cog\n",
+    "from asf_tools.raster import write_cog\n",
     "\n",
     "hand_raster = Path(dem_tile).name.replace('DEM.tif', f'HAND_ACC{accumulation_threshold}.tif')\n",
     "write_cog(hand_raster, out_pixels, transform=dem.transform.to_gdal(), epsg_code=dem.crs.to_epsg())"
